issue #11 removed overflow in footer

--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -4,17 +4,19 @@
   padding: 0 2rem;
   box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
     &__text-block {
-    padding: 6.5rem 0;
+    padding: 5.5rem 0;
     display: flex;
+    flex-wrap: wrap;
     max-width: 72.5rem;
     margin: 0 auto;
     }
     &__ul {
       list-style-type: none;
-      &:first-child {
+      margin: 1rem 2.5rem 1rem 0;
+      &:nth-child(1) {
         margin-right: 2.5rem;
         max-width: 16.255625rem;
-        margin-top: -0.25rem;
+        //margin-top: -0.25rem;
         .footer__paragraph {
           font-size: 0.875rem;
           line-height: 1.5rem;
@@ -36,15 +38,17 @@
         }
       }
       &:nth-child(4) {
-        margin-right: 3.1875rem;
+        margin-right: 3.18rem;
         .footer__li {
           min-width: 9.3125rem;
         }
       }
-      &:last-child {
+      &:nth-child(5) {
         max-width: 16.25rem;
+        margin-right: 0;
         .footer__li:first-child {
           margin-bottom: 1.0625rem;
+          
         }
         .footer__li:nth-child(2) {
           line-height: 1.5rem;
@@ -83,20 +87,15 @@
       }
     }
 }
-@media (max-width: 85rem) {
-  .footer,
-  .footer_eng {
-    &__text-block {
-      flex-wrap: wrap;
-    }
+.footer_eng {
+  @extend .footer;
+  .footer__text-block {
+    padding: 5.19375rem 0 5.4rem;
   }
 }
 @media (max-width: 80.625rem) {
   .footer,
   .footer_eng {
-    .footer__ul {
-      margin-bottom: 2rem;
-    }
     .footer__text-block {
       padding-bottom:  0;
     }
@@ -124,10 +123,5 @@
   }
 }
 
-.footer_eng {
-  @extend .footer;
-  .footer__text-block {
-    padding: 6.19375rem 0 6.4rem;
-  }
-}
+
 
